# bankbot

./: .gitignore  Cargo.toml  README.md  initialize.sh  schema.sql
src/: commands.rs  currency.rs  main.rs  operation.rs  stat.rs
