[package]
name = "bankbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite" ] }
serenity = { version = "0.11", default-features=false, features = ["client", "gateway", "rustls_backend", "model"]}
